--- a/src/app/modules/customer/pending-customers/pending-customers.component.html
+++ b/src/app/modules/customer/pending-customers/pending-customers.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Pendings Customer</div>
+  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Pendings Customer</div>
 
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4"
