--- a/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
+++ b/src/app/modules/land-creation/large-files-upload/large-files-upload.component.html
@@ -1,7 +1,7 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label py-4 ">
-            <h3 class=" kt-portlet__head-title text-3xl">{{getTitle()}}</h3>
+            <h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{getTitle()}}</h3>
         </div>
     </div>
     <form class="kt-form kt-form--group-seperator-dashed" [formGroup]="myForm">
@@ -33,14 +33,14 @@
                             <div class="col-lg-3"  *ngFor="let url of uploadDocumentsData; let i = index;">
                                 <div  *ngIf="CheckImageOrVideo(url.Path)">
                                     <span class="delete-entry relative"
-                                          style="cursor:pointer;position: absolute; z-index: 5; right:-7px;TOP: 26px; font-size:20px;"
+                                          style="cursor:pointer;position: absolute; z-index: 5; right:-173px;TOP: 26px; font-size:20px;"
                                           (click)="deleteImage(url.Path,url.ImageID,i)" *ngIf="!isFormReadonly"><b>x</b></span>
                                     <a href="{{url.Path}}" target="_blank"><img class="mx-4" [src]="url.Path" class="rounded float-left"
                                                                                 style="width:200px; height:120px; padding-right:5px; "></a>
                                 </div>
                                 <div   *ngIf="CheckImageOrVideo(url.VideoPath)">
                                     <span class="delete-entry  relative"
-                                          style="cursor:pointer;position: absolute; z-index: 5;  right:-7px;TOP: 26px; font-size:20px;"
+                                          style="cursor:pointer;position: absolute; z-index: 5;  right:-173px;TOP: 26px; font-size:20px;"
                                           (click)="deleteImage(url.VideoPath,url.ImageID,i)"
                                           *ngIf="!isFormReadonly"><b>x</b></span> <a href="{{url.VideoPath}}" target="_blank">
         
