--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight">Loan Case Inquiry</div>
+  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Case Inquiry</div>
   <!-- Header -->
   <div class="pt-4"
   [formGroup]="RecoveryForm">
