--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -1,5 +1,5 @@
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Set Target</div>
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Set Target</div>
     <div class="py-4" [formGroup]="customerForm">
 
         <div class="row">
@@ -35,7 +35,7 @@
 
         </div>
 
-        <div class="text-4xl font-extrabold tracking-tight">Targets</div>
+        <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Targets</div>
 <!--        <div class="flex flex-auto overflow-hidden">-->
         <div *ngIf="ishidden" class="col-lg-12 mt-2">
 
