--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -1,7 +1,7 @@
-<div class="px-10 pt-4sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight py-4">Deceased Customers</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Deceased Customers</div>
     <form [formGroup]="customerForm" class="kt-form kt-form--group-seperator-dashed">
-        <div class="form-group kt-form__group row">
+        <div class="form-group kt-form__group row mt-4 ">
 
                         <kt-alert *ngIf="hasFormErrors" class="col-lg-12" type="warn" [duration]="30000" [showCloseButton]="true"
                                   (close)="onAlertClose($event)">
