--- a/src/app/modules/land-creation/area-converter/area-converter.component.html
+++ b/src/app/modules/land-creation/area-converter/area-converter.component.html
@@ -1,7 +1,7 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
-            <h3 class="kt-portlet__head-title">Area Convertor</h3>
+            <h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Area Convertor</h3>
         </div>
     </div>
     <!--<kt-customer-list></kt-customer-list>-->
@@ -9,11 +9,10 @@
         <div class="kt-form">
             <div class="kt-portlet__body">
 
-                <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-2 kt-margin-bottom-20-mobile">
-
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-12">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Unit <strong class="matMandatory"></strong></mat-label>
                             <mat-select [(ngModel)]="Unit" [ngModelOptions]="{standalone: true}"
                             >
@@ -23,18 +22,8 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-
-                    <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                            <mat-label class="customMatLabel">Area <strong class="matMandatory">*</strong></mat-label>
-                            <input matInput placeholder="" [(ngModel)]="Area"
-                                   [ngModelOptions]="{standalone: true}" maxlength="30" autocomplete="off"
-                                   ktNumberAndDecimal/>
-                        </mat-form-field>
-                    </div>
-
-                    <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                    <div class="col-lg-4 col-sm-12">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Convert Unit<strong class="matMandatory"></strong>
                             </mat-label>
                             <mat-select [(ngModel)]="ConvertUnit" [ngModelOptions]="{standalone: true}"
@@ -45,13 +34,23 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-                    <div class="col-lg-2 kt-margin-bottom-20-mobile mt-3">
-                        <button mat-raised-button color="primary" (click)="AreaConverter()">
+                    <div class="col-lg-4 col-sm-12">
+                        <mat-form-field class="mat-form-field-fluid w-6/12" appearance="outline">
+                            <mat-label class="customMatLabel">Area <strong class="matMandatory">*</strong></mat-label>
+                            <input matInput placeholder="" [(ngModel)]="Area"
+                                   [ngModelOptions]="{standalone: true}" maxlength="30" autocomplete="off"
+                                   ktNumberAndDecimal/>
+                        </mat-form-field>
+                        <button class="ml-2" mat-raised-button color="primary" (click)="AreaConverter()">
                             Convert
                         </button>
                     </div>
+                </div>
+
+                <div class="form-group kt-form__group row">
+
                     <div class="col-lg-3 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Result</mat-label>
                             <input matInput [(ngModel)]="Result" [ngModelOptions]="{standalone: true}"
                                    readonly="readonly" maxlength="30" autocomplete="off"/>
@@ -82,9 +81,9 @@
                     <div class="kt-form__actions kt-form__actions--solid">
                         <div class="row text-center">
                             <div class="col-lg-12">
-                                <button type="button" class="button-red" mat-raised-button cdkFocusInitial
+                                <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                         value="Cancel" [mat-dialog-close]="false" (click)="onCloseClick()">
-                                    Close
+                                        <mat-icon class="mr-2">cancel</mat-icon>Close
                                 </button>
                             </div>
                         </div>
