--- a/src/app/modules/loan/create-loan/create-loan.component.html
+++ b/src/app/modules/loan/create-loan/create-loan.component.html
@@ -1,12 +1,12 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight mt-4 mx-10">Loan Application</div>
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Loan Application</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
+  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4">
 
   </div>
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-y-scroll mx-8">
+  <div class="flex flex-auto overflow-y-scroll">
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
