--- a/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
+++ b/src/app/modules/reschedule-cases/request-for-rl/request-for-rl.component.html
@@ -1,10 +1,10 @@
 +<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Request for Reschedulement of Loan Installment</div>
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Request for Reschedulement of Loan Installment</div>
 
     <!-- Header -->
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
          style="flex-wrap: wrap" [formGroup]="RfrlForm">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
                 <mat-label class="customMatLabel">Zone</mat-label>
@@ -74,7 +74,7 @@
             </mat-form-field>
         </div>
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                 <mat-label class="customMatLabel">Branch Remarks<strong class="matMandatory">*</strong></mat-label>
