--- a/src/app/modules/land-creation/customer-list-dialog/customer-list-dialog.component.html
+++ b/src/app/modules/land-creation/customer-list-dialog/customer-list-dialog.component.html
@@ -17,17 +17,17 @@
     </div>
     <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
         <div class="kt-form__actions kt-form__actions--solid">
-            <div class="row text-center">
-                <div class="col-lg-12 mt-1p mb-1p">
-                    <button type="button" class="button-red" mat-raised-button cdkFocusInitial value="Cancel"
-                            [mat-dialog-close]="false" (click)="onCloseClick()">
-                        Close
-                    </button>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
 
-
+<div class="row text-center">
+  <div class="col-lg-12 mt-1p mb-1p text-end bottom-0">
+      <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+              [mat-dialog-close]="false" (click)="onCloseClick()">
+          Close
+      </button>
+  </div>
+</div>
 
