--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -80,7 +80,7 @@
                     <mat-error *ngIf="isControlHasError('LoanDisbID','required')">
                         <strong class="mx-3">Loan Disbursment ID is mandatory</strong>
                     </mat-error>
-        
+
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
@@ -240,7 +240,7 @@
                         </div>
                     </div>
                     <div style="width: 320px;height: 240px;">
-                        <img [src]="url" (click)="previewImg(url)" width="240px" height="240px">
+                        <img [src]="url" (click)="previewImg(url)" width="320" height="240">
                     </div>
                 </div>
             </div>
