--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -273,7 +273,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <div class="example-table-container" *ngIf="ShowTable">
+        <div class="example-table-container owner-ship-table" *ngIf="ShowTable">
             <table class="table table-striped">
                 <tr class="table-header-background">
                     <th></th>
