--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -118,3 +118,14 @@ body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disab
     }
   }
 }
+
+
+.owner-ship-table{
+  .mat-form-field-wrapper{
+    padding-bottom: 0%;
+  }
+  .mat-form-field-infix{
+    padding-top: 5px;
+      padding-bottom: 10px;
+  }
+}
