--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -1,10 +1,14 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Customer List</div>
+<div
+    class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
+         style="background-color: #f6fcf8;">Customer List
+    </div>
 
     <!-- Header -->
     <div [formGroup]="customerSearch">
 
-        <div class="row mt-4">
+        <div style="display: flex;flex-direction: row;flex-wrap: wrap">
+
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
@@ -48,183 +52,128 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <div class="col-md-3 " *ngIf="!isUserAdmin && !isZoneUser">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label>Branch</mat-label>
-                        <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">
-                        <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
-                    </mat-form-field>
-                </div>
-
-                <div class="col-md-3 col-sm-12" *ngIf="isUserAdmin || isZoneUser">
-                    <div class="col-md-12 kt-margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full map-fields" appearance="outline"
-                                        *ngIf="!BMUser">
-                            <mat-label>Branch</mat-label>
-                            <mat-select (selectionChange)="SetBranches($event)" formControlName="Branch">
-                                <mat-option>
-                                    <ngx-mat-select-search placeholderLabel="Search Branch..."
-                                                           (focusout)="validateBranchOnFocusOut()"
-                                                           noEntriesFoundLabel="No Branch Found"
-                                                           (keyup)="searchBranch($event.target.value)">
-                                    </ngx-mat-select-search>
-                                </mat-option>
-                                <mat-option>
-                                    Select
-                                </mat-option>
-                                <mat-option *ngFor="let branch of SelectedBranches" [value]="branch.BranchId">
-                                    {{branch.Name }}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                </div>
             </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-12">
-                    <div class="col-md-12 kt-margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>Customer Name</mat-label>
-                            <input matInput formControlName="CustomerName" placeholder="Enter Customer Name"
-                                   maxlength="100"
-                                   autocomplete="off" appAlphabetOnly>
-                            <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
-                        </mat-form-field>
-                    </div>
-
-
-                </div>
-                <div class="col-md-3 col-sm-12">
-                    <div class="col-md-12 kt-margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>Cnic</mat-label>
-                            <input matInput formControlName="Cnic" placeholder="Enter Cnic" maxlength="100"
-                                   autocomplete="off"
-                                   [mask]="maskEnums.cnic">
-                            <!--      <mat-error *ngIf="hasError('Cnic', 'required')">Cnic <strong>required</strong></mat-error>-->
-                            <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong></mat-error>
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12">
-                    <div class="col-md-12 kt-margin-bottom-10-mobile">
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>Father Name</mat-label>
-                            <input matInput formControlName="FatherName" placeholder="Enter Father Name" maxlength="100"
-                                   autocomplete="off"
-                                   appAlphabetOnly>
-                            <!--   <mat-error *ngIf="hasError('FatherName', 'required')">FatherName<strong>required</strong></mat-error>-->
-                        </mat-form-field>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-12">
-
-                    <div *ngIf="CustomerStatusLov" class="col-md-12 kt-margin-bottom-10-mobile flex">
-
-                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                            <mat-label>Select Customer Status</mat-label>
-                            <mat-select formControlName="CustomerStatus">
-                                <mat-option value="">
-                                    Select
-                                </mat-option>
-                                <mat-option *ngFor="let obj of CustomerStatusLov.LOVs" [value]="obj.Value">
-                                    {{obj.Name}}
-                                </mat-option>
-                            </mat-select>
-
-                        </mat-form-field>
-
-
-                    </div>
-
-
-                </div>
-            </div>
-
-
-            <div class="row">
-
-                <div class="col-md-3 col-sm-12">
-                    <div class="flex flex-shrink-0 items-center sm:mt-0">
-
-                        <button mat-raised-button class="mat-raised-button mat-button-base mat-primary" type="button"
-                                (click)="searchCustomer()">
-                            <mat-icon class="mr-2">search</mat-icon>
-                            Search
-                        </button>
-                    </div>
-                </div>
-
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Customer Name</mat-label>
+                    <input matInput formControlName="CustomerName" placeholder="Enter Customer Name"
+                           maxlength="100"
+                           autocomplete="off" appAlphabetOnly>
+                    <!--  <mat-error *ngIf="hasError('CustomerName', 'required')">CustomerName <strong>required</strong></mat-error>-->
+                </mat-form-field>
 
             </div>
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Cnic</mat-label>
+                    <input matInput formControlName="Cnic" placeholder="Enter Cnic" maxlength="100"
+                           autocomplete="off"
+                           [mask]="maskEnums.cnic">
+                    <!--      <mat-error *ngIf="hasError('Cnic', 'required')">Cnic <strong>required</strong></mat-error>-->
+                    <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>{{errors.cnic}}</strong></mat-error>
+                </mat-form-field>
+            </div>
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Father Name</mat-label>
+                    <input matInput formControlName="FatherName" placeholder="Enter Father Name" maxlength="100"
+                           autocomplete="off"
+                           appAlphabetOnly>
+                    <!--   <mat-error *ngIf="hasError('FatherName', 'required')">FatherName<strong>required</strong></mat-error>-->
+                </mat-form-field>
+            </div>
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" *ngIf="CustomerStatusLov">
+                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                    <mat-label>Select Customer Status</mat-label>
+                    <mat-select formControlName="CustomerStatus">
+                        <mat-option value="">
+                            Select
+                        </mat-option>
+                        <mat-option *ngFor="let obj of CustomerStatusLov.LOVs" [value]="obj.Value">
+                            {{obj.Name}}
+                        </mat-option>
+                    </mat-select>
+
+                </mat-form-field>
+            </div>
         </div>
-        <div class="flex flex-auto overflow-scroll mt-4" style="flex-direction: column;">
 
-            <div class="example-table-container">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
 
-                <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
-                           matSortActive="id"
-                           matSortDirection="asc" matSortDisableClear>
+            <button mat-raised-button type="button"
+                    (click)="searchCustomer()">
+                <mat-icon class="mr-2">search</mat-icon>
+                Search
+            </button>
+        </div>
+    </div>
+    <div class="flex flex-auto overflow-scroll mt-4" style="flex-direction: column;">
 
-                    <ng-container matColumnDef="CustomerName">
-                        <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">{{customer.CustomerName}}</mat-cell>
-                    </ng-container>
+        <div class="example-table-container">
+
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
+                       matSortActive="id"
+                       matSortDirection="asc" matSortDisableClear>
+
+                <ng-container matColumnDef="CustomerName">
+                    <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.CustomerName}}</mat-cell>
+                </ng-container>
 
 
-                    <!--<ng-container matColumnDef="CustomerNumber">
-             <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Number</mat-header-cell>
-             <mat-cell *matCellDef="let customer">{{customer.CustomerNumber}}</mat-cell>
-            </ng-container>-->
+                <!--<ng-container matColumnDef="CustomerNumber">
+         <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Number</mat-header-cell>
+         <mat-cell *matCellDef="let customer">{{customer.CustomerNumber}}</mat-cell>
+        </ng-container>-->
 
-                    <ng-container matColumnDef="FatherName">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Father Name</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">{{customer.FatherName}}</mat-cell>
-                    </ng-container>
+                <ng-container matColumnDef="FatherName">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Father Name</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.FatherName}}</mat-cell>
+                </ng-container>
 
-                    <ng-container matColumnDef="Cnic">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">{{customer.Cnic}}</mat-cell>
-                    </ng-container>
+                <ng-container matColumnDef="Cnic">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Cnic</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.Cnic}}</mat-cell>
+                </ng-container>
 
-                    <ng-container matColumnDef="CurrentAddress">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">{{customer.CurrentAddress}}</mat-cell>
-                    </ng-container>
-                    <ng-container matColumnDef="CustomerStatus">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">{{getStatus(customer.CustomerStatus)}}</mat-cell>
-                    </ng-container>
-                    <ng-container matColumnDef="View" *ngIf="!isDialog">
-                        <mat-header-cell *matHeaderCellDef>View</mat-header-cell>
-                        <mat-cell *matCellDef="let customer">
-                            <button *ngIf="!isDialog" mat-icon-button color="primary" (click)="editCustomer(customer)">
-                                <!--<mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>   loggedInUserDetails.User.UserId        -->
-                                <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
-                            </button>
-                        </mat-cell>
-                    </ng-container>
+                <ng-container matColumnDef="CurrentAddress">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.CurrentAddress}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="CustomerStatus">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{getStatus(customer.CustomerStatus)}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="View" *ngIf="!isDialog">
+                    <mat-header-cell *matHeaderCellDef>View</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">
+                        <button *ngIf="!isDialog" mat-icon-button color="primary" (click)="editCustomer(customer)">
+                            <!--<mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>   loggedInUserDetails.User.UserId        -->
+                            <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
+                        </button>
+                    </mat-cell>
+                </ng-container>
 
-                    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background">
-                    </mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true;" class="table-header-background">
+                </mat-header-row>
 
-                    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-                </mat-table>
+                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+            </mat-table>
 
-                <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
-                <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-                <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]"
-                               [showFirstLastButtons]="true">
-                </mat-paginator>
-
-            </div>
+            <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
+            <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+            <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]"
+                           [showFirstLastButtons]="true">
+            </mat-paginator>
 
         </div>
 
     </div>
+
+</div>
 
 
 
