--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class=" px-10 pt-4 sm:absolute sm:inset-0   overflow-y-scroll overflow-x-scroll bg-card dark:bg-transparent">
-        <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>
+        <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">NDC Search List</div>
 
         <!-- Header -->
         <form [formGroup]="ndcForm">
@@ -56,12 +56,11 @@
 
                     </div>
                     <div class="row">
-                      <div class="col-lg-2 col-sm-12">
+                      <div class="col-lg-4 col-sm-12 ">
                         <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()" color="primary" type="button"><mat-icon class="mr-2">search</mat-icon> Search</button>
+                        <span class="cursor-pointer mx-4" id="llcInquiryText" (click)="loadUsersList()"><b class="-mt-4">Get All</b></span>
                       </div>
-                      <div class="col-lg-2 col-sm-12">
-                        <span id="llcInquiryText" (click)="loadUsersList()"><b>Get All</b></span>
-                      </div>
+
                   </div>
 
         </form>
