--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -2,7 +2,7 @@
     <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
     </div>
 <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight">Get Village Bench Marking</div>
+    <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Get Village Bench Marking</div>
 
     <!-- Header -->
     <div class="pt-4" [formGroup]="getVillageBenchmarkForm">
