--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -133,7 +133,7 @@ flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
 
                     <button mat-raised-button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                             type="button" (click)="find()">
-                        <mat-icon>search</mat-icon>
+                        <mat-icon class="mr-2">search</mat-icon>
                         Find
                     </button>
                 </div>
