--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -114,7 +114,7 @@
 
 
     </div>
-    <div class="flex flex-auto pt-4" style="flex-direction: column;overflow-y: scroll">
+    <div class="flex flex-auto mt-4" style="flex-direction: column;overflow-y: scroll">
         <div class="example-table-container">
             <!--[style.height]="gridHeight"-->
             <mat-table
