--- a/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
+++ b/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
@@ -1,30 +1,44 @@
 <form [formGroup]="documentTypeForm" class="kt-form kt-form--group-seperator-dashed">
+    <div class="row">
+        <div class="col-lg-6 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <input matInput placeholder="Enter Document Name" formControlName="Name" maxlength="30"
+                       autocomplete="off"/>
+                <mat-error *ngIf="hasError('Name', 'required')">Name <strong>required</strong></mat-error>
+                <mat-hint align="left">Please enter <strong>Name</strong></mat-hint>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <input matInput placeholder="Enter No Of Pages" formControlName="NoOfPages" maxlength="60"
+                       autocomplete="off" appNumberOnly min="1"/>
+                <mat-error *ngIf="hasError('NoOfPages', 'required')">No Of Pages <strong>required</strong></mat-error>
+                <mat-hint align="left">Please enter <strong>No Of Pages</strong></mat-hint>
+            </mat-form-field>
+        </div>
+
+    </div>
 
 
-    <mat-form-field class="mat-form-field-fluid" appearance="outline">
-        <input matInput placeholder="Enter Document Name" formControlName="Name" maxlength="30"
-               autocomplete="off"/>
-        <mat-error *ngIf="hasError('Name', 'required')">Name <strong>required</strong></mat-error>
-        <mat-hint align="left">Please enter <strong>Name</strong></mat-hint>
-    </mat-form-field>
-    <mat-form-field class="mat-form-field-fluid" appearance="outline">
-        <input matInput placeholder="Enter No Of Pages" formControlName="NoOfPages" maxlength="60"
-               autocomplete="off" appNumberOnly min="1"/>
-        <mat-error *ngIf="hasError('NoOfPages', 'required')">No Of Pages <strong>required</strong></mat-error>
-        <mat-hint align="left">Please enter <strong>No Of Pages</strong></mat-hint>
-    </mat-form-field>
-    <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
-        <div class="kt-form__actions kt-form__actions--solid">
-            <div class="row text-right">
-                <div class="col-lg-12">
-                    <button type="button" class="button-red" mat-raised-button [mat-dialog-close]="data.animal"
-                            cdkFocusInitial>
-                        Cancel
-                    </button>&nbsp;
-                    <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSubmit()"
-                            [disabled]="viewLoading || submitted">
-                        Save
-                    </button>
+
+
+
+    <div class="row pt-4 border-t mt-4">
+        <div class="col-lg-12 text-center col-sm-12">
+            <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
+                <div class="kt-form__actions kt-form__actions--solid">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button [mat-dialog-close]="data.animal"
+                                    cdkFocusInitial>
+                                    <mat-icon class="mr-2">cancel</mat-icon> Cancel
+                            </button>&nbsp;
+                            <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSubmit()"
+                                    [disabled]="viewLoading || submitted">
+                                    <mat-icon class="mr-2">save</mat-icon> Save
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
