--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -7,7 +7,7 @@
 
             <!-- Title -->
             <div>
-                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
+                <h2 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">
                     Document Type List
                 </h2>
             </div>
