--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -214,7 +214,7 @@
 
     <div class="flex flex-auto h-auto" style="flex-direction: column;">
         <div class="example-class-container">
-            <table class="table table-striped">
+            <table class="table table-striped" style="table-layout: fixed;">
                 <thead>
                 <tr class="table-header-background">
                     <th>CNIC</th>
@@ -227,7 +227,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let dynamic of dynamicArray; let i = index;">
+                <tr  *ngFor="let dynamic of dynamicArray; let i = index;">
                     <td>
                         <input [(ngModel)]="dynamicArray[i].cnic" [readonly]="dynamicArray[i].isReadOnly"
                                [ngModelOptions]="{standalone: true}" class="form-control" type="text" size="6"
@@ -282,15 +282,15 @@
                 </tr>
                 <tr class="table-header-background">
                     <th>Land Type</th>
-                    <th>Area</th>
-                    <th>1-Area Owned</th>
-                    <th>2-Leased In</th>
-                    <th>3-Leased Out</th>
-                    <th>4-Family Operated</th>
-                    <th>5-Under Custom Hiring</th>
-                    <th>Total (1+2+4+5-3)</th>
+                    <th class="pl-3">Area</th>
+                    <th class="pl-3">1-Area Owned</th>
+                    <th class="pl-3">2-Leased In</th>
+                    <th class="pl-3">3-Leased Out</th>
+                    <th class="pl-3">4-Family Operated</th>
+                    <th class="pl-3">5-Under Custom Hiring</th>
+                    <th class="pl-3">Total (1+2+4+5-3)</th>
                 </tr>
-                <tr class="text-center border-0">
+                <tr class="text-center border-0 values-row">
                     <td>Barani</td>
                     <td>
                         <mat-form-field class="mat-form-field-fluid" appearance="outline">
