--- a/src/app/modules/land-creation/customer-list-dialog/customer-list-dialog.component.html
+++ b/src/app/modules/land-creation/customer-list-dialog/customer-list-dialog.component.html
@@ -24,9 +24,9 @@
 
 <div class="row text-center">
   <div class="col-lg-12 mt-1p mb-1p text-end bottom-0">
-      <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
+      <button type="button" class=" mr-6 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel"
               [mat-dialog-close]="false" (click)="onCloseClick()">
-          Close
+              <mat-icon class="mr-2">cancel</mat-icon> Close
       </button>
   </div>
 </div>
