Get all function fixed

--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -58,7 +58,7 @@
                     <div class="row">
                       <div class="col-lg-4 col-sm-12 ">
                         <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="findCnic()" color="primary" type="button"><mat-icon class="mr-2">search</mat-icon> Search</button>
-                        <span class="cursor-pointer mx-4" id="llcInquiryText" (click)="loadUsersList()"><b class="-mt-4">Get All</b></span>
+                        <span class="cursor-pointer mx-4" id="llcInquiryText" (click)="refresh()"><b class="-mt-4">Get All</b></span>
                       </div>
 
                   </div>
